added product variant data

--- a/src/product/templates/products/list.html
+++ b/src/product/templates/products/list.html
@@ -68,7 +68,11 @@
                     <select name="variant" class="form-control">
                         <option selected disabled>--Select A Variant--</option>
                         {% for variant in variants %}
-                            <option value="{{ variant.variant_title }}">{{ variant.variant_title }}</option>
+                            <optgroup label="{{ variant.title }}">
+                                {% for sub_option in variant_sub_options|get_item:variant %}
+                                    <option value="{{ sub_option }}">{{ sub_option }}</option>
+                                {% endfor %}
+                            </optgroup>
                         {% endfor %}
                     </select>
                 </div>
@@ -84,7 +88,7 @@
                 <div class="col-md-2">
                     <input type="date" name="date" placeholder="Date" class="form-control" value="{{ request.GET.date }}">
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-2">
                     <button type="submit" class="btn btn-primary float-right"><i class="fa fa-search"></i></button>
                 </div>
             </div>
